# todo-cpp-java

database-service/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.cfg  main.cpp  mysql_driver.h
springApi/src/main/java/org/example/springapi/api/controller/: TodoController.java
springApi/src/main/java/org/example/springapi/api/controllers/: TodoController.java
springApi/src/main/java/org/example/springapi/api/model/: TodoItem.java
springApi/src/main/java/org/example/springapi/api/models/: TodoItem.java
springApi/src/main/java/org/example/springapi/api/service/: TodoService.java
springApi/src/main/java/org/example/springapi/api/services/: TodoService.java
springApi/src/main/resources/: application.properties
springApi/src/test/java/org/example/springapi/api/controllers/: TodoControllerTests.java
